force-app/main/default/objects/Product2/fields/AI_Summary_Hindi__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Hindi__c</fullName>
    <description>AI-generated product summary in Hindi.</description>
    <label>AI Summary Hindi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>