force-app/main/default/objects/Product2/fields/AI_Summary_Portuguese__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Portuguese__c</fullName>
    <label>AI Summary (Portuguese)</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>