force-app/main/default/objects/Product2/fields/AI_Summary_Spanish__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Spanish__c</fullName>
    <label>AI Summary (Spanish)</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>