force-app/main/default/objects/Product2/fields/Binding_Format__c.field-meta.xml
<CustomField>
    <fullName>Binding_Format__c</fullName>
    <label>Binding Format</label>
    <length>5</length>
    <type>Text</type>
</CustomField>