force-app/main/default/objects/Product2/fields/Digital_Product__c.field-meta.xml
<CustomField>
    <fullName>Digital_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Product</label>
    <type>Checkbox</type>
</CustomField>