force-app/main/default/objects/Product2/fields/Imprint__c.field-meta.xml
<CustomField>
    <fullName>Imprint__c</fullName>
    <description>Publishing imprint associated with the product.</description>
    <label>Imprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imprint A</fullName>
            </value>
            <value>
                <fullName>Imprint B</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>