force-app/main/default/objects/Product2/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description
  >ISBN identifier used by Pricing Accelerator product search.</description>
    <label>ISBN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>